# sign-agent

./: .gitignore  Cargo.toml  README.md  devenv.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
crates/sol/: Cargo.toml  README.md
crates/sol/src/: main.rs
crates/sol/src/commands/: balance.rs  transfer.rs
crates/solana-actor/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-actor-keypair/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-actor-keypair/src/: error.rs  file.rs  lib.rs  signer.rs
crates/solana-actor-ledger/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-actor-ledger/src/: derivation.rs  error.rs  lib.rs  signer.rs  transport.rs
crates/solana-actor-squads/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-actor-squads/src/: error.rs  instructions.rs  lib.rs  pda.rs  transport.rs
crates/solana-actor/src/: connection.rs  direct.rs  error.rs  lib.rs  signer.rs  transport.rs
crates/solana-credential-helper/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-credential-helper-client/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-credential-helper-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/solana-credential-helper/src/: cli.rs  main.rs
crates/solana-credential-helper/src/commands/: mod.rs  sign_transaction.rs
crates/solana-keyring/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-keyring-agent/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-keyring-agent/src/: agent.rs  cli.rs  main.rs  protocol.rs
crates/solana-keyring-agent/src/commands/: lock.rs  mod.rs  start.rs  status.rs  stop.rs  unlock.rs
crates/solana-keyring-biometric/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-keyring-biometric/src/: lib.rs
crates/solana-keyring-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-keyring-cli/src/: cli.rs  main.rs
crates/solana-keyring-cli/src/commands/: address_book.rs  agent_client.rs  delete.rs  export.rs  generate.rs  import.rs  label.rs  ledger.rs  list.rs  mod.rs  new.rs  squads.rs  tag.rs
crates/solana-keyring/src/: address_book.rs  biometric.rs  error.rs  lib.rs  notification.rs  signer.rs  transaction.rs
crates/solana-keyring/src/crypto/: aead.rs  kdf.rs  mod.rs
crates/solana-keyring/src/db/: migrations.rs  mod.rs  schema.rs
crates/solana-keyring/src/keypair/: export.rs  generate.rs  import.rs  mod.rs
crates/solana-keyring/src/ledger/: mod.rs  transport.rs
crates/solana-keyring/src/squads/: execute.rs  instructions.rs  mod.rs  pda.rs  proposal.rs
crates/solite/: CHANGELOG.md  Cargo.toml  README.md
crates/solite/src/: cli.rs
crates/solite/src/commands/: mod.rs  transfer.rs
scripts/: install.sh
