[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Solana
solana-sdk = "^3"
solana-client = "^3"
solana-commitment-config = "^3"
solana-system-interface = { version = "^3", features = ["bincode"] }

# Crypto
aes-gcm = "^0.10"
argon2 = "^0.5"
ed25519-dalek = { version = "^2.1", features = ["rand_core"] }
rand = "^0.9"
zeroize = { version = "^1.8", features = ["derive"] }

# Database
rusqlite = { version = "^0.38", features = ["bundled"] }

# CLI
clap = { version = "^4", features = ["derive"] }
rpassword = "^7"

# Async
tokio = { version = "^1", features = ["full", "net"] }
async-trait = "^0.1"

# Serialization
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
base64 = "^0.22"
bs58 = "^0.5"

# Error handling
anyhow = "^1"
thiserror = "^2"

# Ledger
hidapi = "^2.6"

# Borsh for Squads serialization
borsh = "^1.5"

# Notifications
notify-rust = "^4"

# Paths
dirs = "^6"

# Internal crates
solana-keyring = { path = "crates/solana-keyring" }
solana-keyring-biometric = { path = "crates/solana-keyring-biometric" }
solana-credential-helper-client = { path = "crates/solana-credential-helper-client" }
solana-actor = { path = "crates/solana-actor" }
solana-actor-keypair = { path = "crates/solana-actor-keypair" }
solana-actor-ledger = { path = "crates/solana-actor-ledger" }
solana-actor-squads = { path = "crates/solana-actor-squads" }

[workspace.lints.rust]
missing_docs = "warn"
# unused_crate_dependencies has false positives in workspace setups
# (fires on transitive deps that ARE used in their own crates)

[workspace.lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
