[package]
name = "sol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Simple SOL transfer CLI using solana-keyring"

[[bin]]
name = "sol"
path = "src/main.rs"

[dependencies]
# Solana
solana-sdk.workspace = true
solana-client.workspace = true

# Keyring
solana-keyring.workspace = true
solana-credential-helper-client.workspace = true

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Password input
rpassword.workspace = true

[lints]
workspace = true
