[package]
name = "sol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Simple and secure SOL transfer CLI using solana-keyring"
readme = "README.md"
keywords = ["solana", "sol", "transfer", "cli", "wallet"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "sol"
path = "src/main.rs"

[dependencies]
# Solana
solana-sdk.workspace = true
solana-client.workspace = true

# Keyring
solana-keyring.workspace = true
solana-credential-helper-client.workspace = true

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Password input
rpassword.workspace = true

[lints]
workspace = true
