[package]
name = "solana-actor"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/macalinao/sign-agent"
authors = ["Ian Macalinao <me@ianm.com>"]
description = "Core credential provider traits for Solana signing and transaction submission"
readme = "README.md"
keywords = ["solana", "credential", "signer", "crypto"]
categories = ["cryptography", "authentication"]

[dependencies]
# Solana
solana-sdk.workspace = true
solana-client = { workspace = true, optional = true }
solana-commitment-config = { workspace = true, optional = true }

# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["rt"] }

# Error handling
thiserror.workspace = true

[features]
default = ["rpc"]
rpc = ["solana-client", "solana-commitment-config"]

[lints]
workspace = true
