[package]
name = "solana-credential-helper-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Client library for interacting with solana-credential-helper"

[dependencies]
# Solana
solana-sdk.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true

# Paths
dirs.workspace = true

[lints]
workspace = true
