[package]
name = "solana-credential-helper-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust client library for Solana transaction signing via credential helper"
readme = "README.md"
keywords = ["solana", "signing", "client", "transaction", "wallet"]
categories = ["cryptography", "api-bindings"]

[dependencies]
# Solana
solana-sdk.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true

# Paths
dirs.workspace = true

[lints]
workspace = true
