[package]
name = "solana-credential-helper-client"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/macalinao/sign-agent"
authors = ["Ian Macalinao <me@ianm.com>"]
description = "Rust client library for Solana transaction signing via credential helper"
readme = "README.md"
keywords = ["solana", "signing", "client", "transaction", "wallet"]
categories = ["cryptography", "api-bindings"]

[dependencies]
# Solana
solana-sdk.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true

# Paths
dirs.workspace = true

[lints]
workspace = true
