[package]
name = "solana-credential-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Solana transaction signing helper CLI for secure offline signing"
readme = "README.md"
keywords = ["solana", "signing", "transaction", "credential", "helper"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "solana-credential-helper"
path = "src/main.rs"

[dependencies]
solana-keyring.workspace = true

clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rpassword.workspace = true
base64.workspace = true
bs58.workspace = true

[lints]
workspace = true
