[package]
name = "solana-credential-helper"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/macalinao/sign-agent"
authors = ["Ian Macalinao <me@ianm.com>"]
description = "Solana transaction signing helper CLI for secure offline signing"
readme = "README.md"
keywords = ["solana", "signing", "transaction", "credential", "helper"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "solana-credential-helper"
path = "src/main.rs"

[dependencies]
solana-keyring.workspace = true

clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rpassword.workspace = true
base64.workspace = true
bs58.workspace = true

[lints]
workspace = true
