[package]
name = "solana-keyring-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent daemon for Solana keyring"

[[bin]]
name = "solana-keyring-agent"
path = "src/main.rs"

[dependencies]
solana-keyring.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
anyhow.workspace = true
rpassword.workspace = true
zeroize.workspace = true

[lints]
workspace = true
