[package]
name = "solana-keyring-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Agent daemon for Solana keyring that keeps keys unlocked in memory"
readme = "README.md"
keywords = ["solana", "keyring", "agent", "daemon", "wallet"]
categories = ["cryptography", "authentication"]

[[bin]]
name = "solana-keyring-agent"
path = "src/main.rs"

[dependencies]
solana-keyring.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
anyhow.workspace = true
rpassword.workspace = true
zeroize.workspace = true

[lints]
workspace = true
