[package]
name = "solana-keyring-agent"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/macalinao/sign-agent"
authors = ["Ian Macalinao <me@ianm.com>"]
description = "Agent daemon for Solana keyring that keeps keys unlocked in memory"
readme = "README.md"
keywords = ["solana", "keyring", "agent", "daemon", "wallet"]
categories = ["cryptography", "authentication"]

[[bin]]
name = "solana-keyring-agent"
path = "src/main.rs"

[dependencies]
solana-keyring.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
anyhow.workspace = true
rpassword.workspace = true
zeroize.workspace = true

[lints]
workspace = true
