[package]
name = "solana-keyring-biometric"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Biometric authentication (TouchID) for Solana keyring"
readme = "README.md"
keywords = ["biometric", "touchid", "authentication", "macos", "solana"]
categories = ["authentication", "os::macos-apis"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]

[lints]
workspace = true
