[package]
name = "solana-keyring-biometric"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/macalinao/sign-agent"
authors = ["Ian Macalinao <me@ianm.com>"]
description = "Biometric authentication (TouchID) for Solana keyring"
readme = "README.md"
keywords = ["biometric", "touchid", "authentication", "macos", "solana"]
categories = ["authentication", "os::macos-apis"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]

[lints]
workspace = true
