[package]
name = "solana-keyring-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "CLI tool for managing Solana keyring - generate, import, export keys"
readme = "README.md"
keywords = ["solana", "keyring", "cli", "wallet", "keys"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "solana-keyring"
path = "src/main.rs"

[dependencies]
solana-keyring.workspace = true

clap.workspace = true
rpassword.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

[lints]
workspace = true
