[package]
name = "solana-keyring-cli"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/macalinao/sign-agent"
authors = ["Ian Macalinao <me@ianm.com>"]
description = "CLI tool for managing Solana keyring - generate, import, export keys"
readme = "README.md"
keywords = ["solana", "keyring", "cli", "wallet", "keys"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "solana-keyring"
path = "src/main.rs"

[dependencies]
solana-keyring.workspace = true

clap.workspace = true
rpassword.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
tokio.workspace = true

[lints]
workspace = true
