[package]
name = "solana-keyring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Secure keyring library for Solana with encrypted storage, Ledger, and Squads support"
readme = "README.md"
keywords = ["solana", "keyring", "wallet", "ledger", "crypto"]
categories = ["cryptography", "authentication"]

[dependencies]
# Solana
solana-sdk.workspace = true
solana-client.workspace = true

# Crypto
aes-gcm.workspace = true
argon2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
zeroize.workspace = true

# Database
rusqlite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bs58.workspace = true

# Error handling
thiserror.workspace = true

# Ledger
hidapi.workspace = true

# Borsh for Squads serialization
borsh.workspace = true

# Notifications
notify-rust.workspace = true

# Paths
dirs.workspace = true

# Biometric authentication
solana-keyring-biometric.workspace = true

# Transaction parsing
bincode = "1.3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
