[package]
name = "solite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A lightweight CLI for interacting with Solana"
readme = "README.md"
keywords = ["solana", "cli", "wallet", "transfer", "lightweight"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "solite"
path = "src/main.rs"

[dependencies]
# Solana
solana-sdk.workspace = true
solana-client.workspace = true

# Keyring
solana-keyring.workspace = true
solana-credential-helper-client.workspace = true

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Password input
rpassword.workspace = true

[lints]
workspace = true
