[package]
name = "solite"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/macalinao/sign-agent"
authors = ["Ian Macalinao <me@ianm.com>"]
description = "A lightweight CLI for interacting with Solana"
readme = "README.md"
keywords = ["solana", "cli", "wallet", "transfer", "lightweight"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "solite"
path = "src/main.rs"

[dependencies]
# Solana
solana-sdk.workspace = true
solana-client.workspace = true
solana-system-interface.workspace = true

# Keyring
solana-keyring.workspace = true
solana-credential-helper-client.workspace = true

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Password input
rpassword.workspace = true

[lints]
workspace = true
